--- a/Resources/Public/Less/Theme/misc.less
+++ b/Resources/Public/Less/Theme/misc.less
@@ -21,6 +21,20 @@
 
 
 //
+// Jumbotron
+// --------------------------------------------------
+.jumbotron {
+	a,
+	a:hover,
+	a:active,
+	a:focus {
+		color: inherit;
+		text-decoration: underline;
+	}
+}
+
+
+//
 // Panel
 // --------------------------------------------------
 .panel-body {
